--- a/src/components/ModalView/ModalView.module.css
+++ b/src/components/ModalView/ModalView.module.css
@@ -12,6 +12,6 @@
   max-width: 60%;
   max-height: 80%;
   margin: 6rem auto;
-  box-shadow: 3px 5px 7px rgba(0, 0, 0, 0.5);
+  box-shadow: rgba(0, 0, 0, 0.24) 4px 8px 8px;
   border: none;
 }
